--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 </h5>
             </div>
         </div>
+        <span id="second-content"><b>Because you asked<a href=""></a></b></span>
     </section>
 </body>
 </html>
