--- a/index.html
+++ b/index.html
@@ -70,5 +70,34 @@
         </div>
         <span id="second-content"><b>Because you asked<a href=""></a></b></span>
     </section>
+    <footer>
+        <h2 id="footer-heading">Top companies choose Techo Business to build in-demand career skills.</h2>
+        <hr>
+        <table>
+            <tr>
+                <td><a id="footer-link" href="">Techo Business</a></td>
+                <td><a id="footer-link" href="">Teach on Techo</a></td>
+                <td><a id="footer-link" href="">Get the app</a></td>
+                <td><a id="footer-link" href="">About us</a></td>
+                <td><a id="footer-link" href="">Contact us</a></td>
+            </tr>
+            <tr>
+                <td><a id="footer-link" href="">Careers</a></td>
+                <td><a id="footer-link" href="">Blog</a></td>
+                <td><a id="footer-link" href="">Help and support</a></td>
+                <td><a id="footer-link" href="">Affiliate</a></td>
+                <td><a id="footer-link" href="">Investors</a></td>
+            </tr>
+            <tr>
+                <td><a id="footer-link" href="">Terms</a></td>
+                <td><a id="footer-link" href="">Private Policy</a></td>
+                <td><a id="footer-link" href="">Cookie settings</a></td>
+                <td><a id="footer-link" href="">Sitemap</a></td>
+                <td><a id="footer-link" href="">Accessibilty statement</a></td>
+            </tr>
+        </table>
+        <h1 id="footer-name">TECHO</h1>
+        <p id="copyright">&copy; 2024 Techo, Inc</p>
+    </footer>
 </body>
 </html>
