--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <main id="main-content">
             <h1>Make the right decision </h1>
             <h3>Improve your insight with data science.<a id="writeup" href="">Explore Popular Courses</a></h3>
+            <img id="artwork" height="20px" width="20px" src="./img-videos/download-art-img.png" alt="hand-art-work">
         </main>
     </section>
     <section id="sect-two">
@@ -44,9 +45,9 @@
             <tr>
                 <p id="content"><b>Let's start learning, Stephanie Nnesochi</b></p>
                 <a id="content-link" href="">My learning</a>
-                <td><video id="videos" src="./img-videos/3957959-sd_640_360_25fps.mp4"></video></td>
-                <td><video id="videos" src="./img-videos/4625318-sd_640_360_25fps.mp4"></video></td>
-                <td><video id="videos" src="./img-videos/4017223-sd_640_360_30fps.mp4"></video></td>
+                <td><video id="videos" src="./img-videos/3957959-sd_640_360_25fps.mp4" autoplay controls poster="./img-videos/1_E2QWYie9jgo_ap4Xoq3e8g.jpg"></video></td>
+                <td><video id="videos" src="./img-videos/4625318-sd_640_360_25fps.mp4" autoplay controls poster="./img-videos/1_v66jCaTukQdd7Edz_TdCqg.jpg"></video></td>
+                <td><video id="videos" src="./img-videos/4017223-sd_640_360_30fps.mp4" autoplay controls poster="./img-videos/FPg8IHhWUAE0Zyz.jpg"></video></td>
             </tr>
         </table>
         <aside>
@@ -71,7 +72,14 @@
         <span id="second-content"><b>Because you asked<a href=""></a></b></span>
     </section>
     <footer>
-        <h2 id="footer-heading">Top companies choose Techo Business to build in-demand career skills.</h2>
+        <div id="footer-top">
+            <h2 id="footer-heading">Top companies choose Techo Business to build in-demand career skills.</h2>
+            <a href="https://www.techo.com" target="_blank"><img class="footer-logos" src="./img-videos/google.png"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img class="footer-logos" src="./img-videos/linkedin.png"></a>
+            <a href="https://www.facebook.com" target="_blank"><img class="footer-logos" src="./img-videos/facebook.png"></a>
+            <a href="https://www.youtube.com" target="_blank"><img class="footer-logos" src="./img-videos/youtube.png"></a>
+        </div>
+        
         <hr>
         <table>
             <tr>
